--- a/_notebooks/2022-03-05-Airlines.ipynb
+++ b/_notebooks/2022-03-05-Airlines.ipynb
@@ -8,7 +8,8 @@
     "# \"Airlines Data Analysis\"\n",
     "> \"This notebook explores and analyzes the airlines data from the CORGIS website.\"\n",
     "\n",
-    "- toc:true- branch: master\n",
+    "- toc:true\n",
+    "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
     "- author: Hamel Husain & Jeremy Howard\n",
