--- a/_notebooks/2022-03-05-Airlines.ipynb
+++ b/_notebooks/2022-03-05-Airlines.ipynb
@@ -5,7 +5,7 @@
    "id": "600cd321-1ea0-4af4-99f9-a190b578e028",
    "metadata": {},
    "source": [
-    "# \"Airlines Data Analysis\"\n",
+    "# Airlines Data Analysis\n",
     "> \"This notebook explores and analyzes the airlines data from the CORGIS website.\"\n",
     "\n",
     "- toc:true\n",
