--- a/_notebooks/2022-03-06-Airlines.ipynb
+++ b/_notebooks/2022-03-06-Airlines.ipynb
@@ -656,7 +656,6 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
     "airlines_df.dtypes"
    ]
   },
@@ -1004,7 +1003,7 @@
    "id": "0755b211-3806-4aba-8966-511ea43d4e18",
    "metadata": {},
    "source": [
-    "#### Print out summary statistics about the dataframe\n"
+    "#### Summary statistics about the dataframe\n"
    ]
   },
   {
@@ -1401,6 +1400,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b02c4810-481d-4922-9813-dae08aeb31f1",
+   "metadata": {},
+   "source": [
+    "#### Line plot of Delays due to Weather"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "0c5e2c07-0dff-4e78-bbb7-8faef3fdf758",
@@ -1430,10 +1437,16 @@
     }
    ],
    "source": [
-    "# Choose a column that has numeric values and make a line plot of the values\n",
-    "\n",
     "a = airlines_df['Statistics.# of Delays.Weather']\n",
     "a.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3607b2c-3bfd-4420-ab7c-93deb3869bf1",
+   "metadata": {},
+   "source": [
+    "#### First 10 elements of the 'Statistics. # of Delays Weather'"
    ]
   },
   {
@@ -1531,8 +1544,6 @@
     }
    ],
    "source": [
-    "# Use \"loc\" to print out the first 10 elements of the plotted column\n",
-    "\n",
     "airlines_df.loc[[0,1,2,3,4,5,6,7,8,9],['Statistics.# of Delays.Weather']]"
    ]
   },
@@ -1649,6 +1660,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed240f01-b7ad-43eb-b2d5-1e14fa8490a2",
+   "metadata": {},
+   "source": [
+    "#### Bar Plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "e2b2a59b-4246-40cc-b5de-728bd678b832",
@@ -1683,6 +1702,14 @@
     "\n",
     "a = airlines_df.loc[[0,1,2,3,4,5,6,7,8,9],['Statistics.# of Delays.Weather','Airport.Code']]\n",
     "a.plot(kind = 'bar', x='Airport.Code', y='Statistics.# of Delays.Weather')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93e46f8a-02c5-4530-b466-2a5f38a7b0a0",
+   "metadata": {},
+   "source": [
+    "#### Horizontal Bar Plot"
    ]
   },
   {
@@ -1804,6 +1831,7 @@
     }
    ],
    "source": [
+    "#collapse-hide\n",
     "c = airlines_df.groupby('Airport.Code')[['Statistics.# of Delays.Weather','Statistics.# of Delays.National Aviation System']].sum()\n",
     "c.plot(kind = 'scatter', x= 'Statistics.# of Delays.Weather', y='Statistics.# of Delays.National Aviation System')"
    ]
