--- a/_notebooks/2022-03-06-Airlines.ipynb
+++ b/_notebooks/2022-03-06-Airlines.ipynb
@@ -12,7 +12,7 @@
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- author: Hamel Husain & Jeremy Howard\n",
+    "- author: Samantha Park\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
